5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1593_2425.log
== TEST (2019-03-26 10:33:22) 
-- CODE:
d = float(input("Seu valor: "))
c = float(input("Seu valor: "))

res = d/c

print(round(res,3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(res,3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:58) 
-- CODE:
d = float(input("Seu valor: "))
c = float(input("Seu valor: "))

res = d/c

print(round(res,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:14) 
-- CODE:
d = float(input("Seu valor: "))
c = float(input("Seu valor: "))

res = d/c

print(round(res,3),"km/l")
-- EXECUTION TIME:
0.192451
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
